k8s/flask-api/stack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: stack-flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      imagePullSecrets:
        - name: scr-credentials
      containers:
        - name: flask-api
          image: ECR_REGISTRY/flask-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: stack-flask-api
spec:
  selector:
    app: flask-api
  ports:
    - port: 80
      targetPort: 5000
